welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: '<-' expected but $XMLSTART$< found.
	for (i <_ 0 to getMondeHauteur() - 1) {
               ^Array2:27: error: illegal start of simple expression
}
^