welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	
var tab = new Array[Color] (getMondeHauteur())

def remplirTableau() {
	for (i <- 0 to getMondeHauteur() - 1) {
		while (!estFaceMur) {
			tab(i) = getCouleurSol()
			avance()
		}
		tab(i) = getCouleurSol()	
	}
}

def faireColonne() {
	for (i <_ 0 to getMondeHauteur() - 1) {
		while(!estFaceMur) {
			setCouleurBrosse(tab(i))
			baisseBrosse()
			leveBrosse()
			avance()
		}
		setCouleurBrosse(tab(i))
		baisseBrosse()
		leveBrosse()
	}
}

def seReplacer() {
	gauche()
	avance()
	gauche()
	avance(getMondeHauteur() - 1)
	droite()
	droite()	
}

remplirTableau()
seReplacer()
faireColonne()
	
}
